--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -13,11 +13,11 @@ jobs:
       - name: Start local server on port 3000
         run: python -m SimpleHTTPServer 80
       - name: Defaults
-        uses: actions/wait-for-it@v1
+        uses: ./
         with:
           host: localhost
       - name: Non-default port
-        uses: actions/wait-for-it@v1
+        uses: ./
         with:
           host: localhost
           port: 3000
