--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Ensure action works
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Start local server on port 80
         run: python -m SimpleHTTPServer 80
       - name: Start local server on port 3000
