--- a/action.yaml
+++ b/action.yaml
@@ -27,15 +27,9 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - --host 
-    - ${{ inputs.host }}
-    - --port 
-    - ${{ inputs.port }}
-    - --strict
-    - ${{ inputs.strict }}
-    - --timeout
-    - ${{ inputs.timeout }}
-    - --quiet
-    - ${{ inputs.quiet }}
-    - --
-    - ${{ inputs.command }}
+    - --host=${{ inputs.host }}
+    - --port=${{ inputs.port }}
+    - --strict=${{ inputs.strict }}
+    - --timeout=${{ inputs.timeout }}
+    - --quiet=${{ inputs.quiet }}
+    - -- ${{ inputs.command }}
