use httpd service

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -7,19 +7,24 @@ jobs:
   wait_for_it:
     runs-on: ubuntu-latest
     name: Ensure action works
+    services:
+      test-site-80:
+        image: httpd
+        options: >-
+          -p 3000
+      test-site-3000:
+        image: httpd
+        options: >-
+          -p 3000
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Start local server on port 80
-        run: mini_httpd &
-      - name: Start local server on port 3000
-        run: mini_httpd -p 3000 &
       - name: Defaults
         uses: ./
         with:
-          host: localhost
+          host: test-site-80
       - name: Non-default port
         uses: ./
         with:
-          host: localhost
+          host: test-site-3000
           port: 3000
